# osparc-control

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.md  LICENSE.rst  Makefile  README.md  README.rst  index.html  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
examples/1_simple/: replier.py  replyer.py  requester.py
examples/2_base_time_add/: controller.py  solver.py
examples/3_tsolver/: Controller.py  README.md  Tsolver.py  communication.py
examples/4_coupled_solver/: EMSolver.py  EMSolver_script.py  TSolver.py  coupler.py  coupler_script.py  tsolver_script.py
examples/5_loop/: replier.py  requester.py
examples/base_time_add/: README.md  sidecar_controller.py  sidecar_solver.py  time_solver.py
examples/basic/: replyer.py  requester.py
examples/control_Tsolver/: Controller.py  Tsolver.py  Tsolver_sidecar.py
examples/coupledSolver/: EMSolver.py  EMSolver_script.py  TSolver.py  communication.py  coupler.py  coupler_script.py  tsolver_script.py
examples/tsolver/: Controller.py  README.md  Tsolver.py  communication.py
src/osparc_control/: __init__.py  __main__.py  core.py  errors.py  memory.py  models.py  types.py
src/osparc_control/transport/: base_transport.py  in_memory.py  interface.py  zeromq.py
tests/: __init__.py  conftest.py  test_core.py  test_examples.py  test_main.py  test_memory.py  test_models.py  test_transport.py  test_transport_in_memory.py
tests/examples/: test_all.py
tests/unit/: test_core.py  test_models.py  test_transport.py
